force-app/main/default/objects/HS_Inbound_Stamp__c/fields/HubSpot_Id__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Id__c</fullName>
    <description
  >The HubSpot object id to stamp. The write-back uses batch/update keyed on THIS id, never batch/upsert keyed on the sf-id property -- an upsert against a record whose sf-id is still blank would create a second HubSpot record. HubSpot ids are portal-scoped, which is why Portal__c is part of every row.</description>
    <label>HubSpot Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>