force-app/main/default/objects/HS_Inbound_Stamp__c/fields/Portal__c.field-meta.xml
<CustomField>
    <fullName>Portal__c</fullName>
    <description
  >Portal holding the HubSpot record to stamp. Plain Text for the same reason as on HS_Inbound_Cursor__c.</description>
    <label>Portal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>