force-app/main/default/objects/HS_Inbound_Stamp__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description
  >The newly created Salesforce record id, to be written into the HubSpot record's sf-id property.</description>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>