force-app/main/default/objects/HS_Inbound_Stamp__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Attempts so far, retried up to PortalSyncConfig.MAX_RETRIES.</description>
    <label>Retry Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>