force-app/main/default/objects/HS_Inbound_Stamp__c/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description
  >Salesforce object of the created record, so the drain batch can resolve its HubSpot path and sf-id property from config.</description>
    <label>SObject Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>