force-app/main/default/objects/HS_Inbound_Stamp__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
  >Pending or Failed. Plain Text rather than a restricted picklist, so the drain batch is never blocked by a value the schema does not know. A row is DELETED on success; a row that exhausts its retries is KEPT and dead-lettered, because deleting it would permanently reopen the duplicate-creation window.</description>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>